// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AzureResourceView matches snapshot when current resource is authorized 1`] = `
<Fragment>
  <Component
    component={[Function]}
    exact={true}
    path="/resource/hostName/devices"
  />
  <Component
    component={[Function]}
    exact={true}
    path="/resource/hostName/devices/add"
  />
  <Component
    component={[Function]}
    path="/resource/hostName/devices/deviceDetail/"
  />
</Fragment>
`;

exports[`AzureResourceView matches snapshot when current resource is failed 1`] = `
<div>
  azureResource.access.failed
</div>
`;

exports[`AzureResourceView matches snapshot when current resource is unauthorized 1`] = `
<div>
  azureResource.access.unauthorized
</div>
`;

exports[`AzureResourceView matches snapshot when current resource is undefined 1`] = `<Fragment />`;

exports[`AzureResourceView matches snapshot when current resource is verifying 1`] = `
<div>
  azureResource.access.verifying
</div>
`;
